@@ -1,6 +1,7 @@
 Version 0.5
 --------------
 Feature: This is marked as a major release due to extensive architectural changes that were made.
+Feature: "Send link to SABnzbd" link added to chrome context menu for http links. Note that this feature is not intended to be used on links that will require authentication.
 Bugfix: Fixed continuous memory leaks happening during refreshes.
 Bugfix: SabConnect++ no longer crashes after a period of time.
 Bugfix: Several script errors eliminated and stability improved.
